--- a/frontend/TodoFromScratch/app/src/main/AndroidManifest.xml
+++ b/frontend/TodoFromScratch/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/gold_ingots_gold_svgrepo_com"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/gold_ingots_gold_svgrepo_com"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoFromScratch"
         tools:targetApi="31">
@@ -18,7 +18,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TodoFromScratch">
+            android:theme="@style/Theme.App.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
